# QtQmlModuleExample

./: README.md
MyModule/: MyGreenRec.qml  MyRedRec.qml
MyModuleTest/: CMakeLists.txt  Main.qml  main.cpp
